cmake_minimum_required(VERSION 3.1)
SET(CMAKE_APP_NAME "Algorithms")
project (${CMAKE_APP_NAME})
INCLUDE_DIRECTORIES(tools)
INCLUDE_DIRECTORIES(sorting)
INCLUDE_DIRECTORIES(searching)
INCLUDE_DIRECTORIES(data_structures)
add_executable(${CMAKE_APP_NAME} main.cpp tools/Tools.cpp tools/Tools.h sorting/Sorting.h searching/Searching.h data_structures/Heap.h)